--- a/src/main/resources/templates/tipo-item/cadastro.html
+++ b/src/main/resources/templates/tipo-item/cadastro.html
@@ -3,17 +3,16 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Cadastro de Tipo de Item | Ferramentas em Uso Mecânica</title>
+  <title th:text="${cadastro} ? 'Cadastrar Tipo de Item  | Ferramentas em Uso Mecânica' : 'Editar Tipo de Item  | Ferramentas em Uso Mecânica'" ></title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-gray-100 flex items-center justify-center min-h-screen pt-20">
 
 <!-- Navbar -->
-<!-- Navbar -->
 <header class="bg-white shadow fixed top-0 left-0 right-0 z-50">
   <div class="max-w-7xl mx-auto px-4 py-4 flex justify-between items-center">
     <a th:href="@{/home}" class="text-xl font-bold text-blue-600 hover:underline">
-      Ferramentas em Uso Mecânica
+      Ferramentas em Uso - Mecânica
     </a>
 
     <nav class="flex items-center space-x-6">
@@ -34,13 +33,13 @@
 <div class="w-full max-w-md p-8 space-y-6 bg-white rounded-2xl shadow-md">
 
   <div class="text-center">
-    <h1 th:text="${textoTitulo}" class="text-2xl font-bold text-gray-800"></h1>
-    <p th:text="${textoSubTitulo}" class="text-sm text-gray-500"></p>
+    <h1 th:text="${cadastro} ? 'Cadastro de Tipo de Item' : 'Editar Tipo de Item'" class="text-2xl font-bold text-gray-800"></h1>
+    <p th:text="${cadastro} ? 'Preencha as informações abaixo' : 'Atualize os dados do tipo de item'" class="text-sm text-gray-500"></p>
   </div>
 
   <!-- Alerta -->
   <div th:if="${mensagem}"
-       class="p-4 mb-6 bg-green-100 border border-green-400 text-green-700 rounded w-full max-w-2xl text-center shadow mx-auto">
+       class="p-4 mb-6 bg-red-100 border border-red-400 text-red-700 rounded w-full max-w-2xl text-center shadow mx-auto">
     <span th:text="${mensagem}"></span>
   </div>
 
