--- a/src/main/resources/templates/autenticacao/cadastro.html
+++ b/src/main/resources/templates/autenticacao/cadastro.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Cadastro | Ferramentas em Uso Mecânica</title>
+    <title th:text="${cadastro} ? 'Cadastro de Usuário | Ferramentas em Uso Mecânica' : 'Edição de Usuário | Ferramentas em Uso Mecânica'" ></title>
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-gray-100 flex items-center justify-center min-h-screen pt-20">
@@ -31,15 +31,15 @@
 
 <div class="w-full max-w-md p-8 space-y-6 bg-white rounded-2xl shadow-md">
     <div class="text-center">
-        <h1 th:text="${textoTitulo}" class="text-2xl font-bold text-gray-800"></h1>
-        <p th:text="${textoSubTitulo}" class="text-sm text-gray-500"></p>
+        <h1 th:text="${cadastro} ? 'Cadastro de Usuário' : 'Edição de Usuário'" class="text-2xl font-bold text-gray-800"></h1>
+        <p th:text="${cadastro} ? 'Crie uma conta preenchendo os campos abaixo' : 'Edite as informações da sua conta preenchendo os campos abaixo'" class="text-sm text-gray-500"></p>
     </div>
 
     <!-- Alerta -->
-    <div th:if="${mensagem}"
-         class="p-4 mb-6 bg-green-100 border border-green-400 text-green-700 rounded w-full max-w-2xl text-center shadow mx-auto">
+    <div th:if="${mensagem}" th:class="'p-4 mb-6 rounded w-full max-w-2xl text-center shadow mx-auto border ' + (${sucesso} ? 'bg-green-100 border-green-400 text-green-700' : 'bg-red-100 border-red-400 text-red-700')">
         <span th:text="${mensagem}"></span>
     </div>
+
 
     <form method="post"
           th:action="@{/cadastro/salvar}"
