--- a/src/main/resources/templates/item/cadastro.html
+++ b/src/main/resources/templates/item/cadastro.html
@@ -23,19 +23,22 @@
     </div>
 </header>
 
-<!-- Alerta de mensagem -->
-<div th:if="${mensagem}"
-     class="p-4 mb-6 bg-red-100 border border-red-400 text-red-700 rounded w-full max-w-2xl text-center shadow mx-auto">
-    <span th:text="${mensagem}"></span>
-</div>
+
 
 <!-- Conteúdo principal -->
 <main class="max-w-3xl mx-auto px-4 py-8">
+
+    <!-- Alerta de mensagem -->
+    <div th:if="${mensagem}" th:class="'p-4 mb-6 rounded w-full max-w-2xl text-center shadow mx-auto border ' + (${sucesso} ? 'bg-green-100 border-green-400 text-green-700' : 'bg-red-100 border-red-400 text-red-700')">
+        <span th:text="${mensagem}"></span>
+    </div>
 
     <div class="bg-white p-6 rounded-lg shadow">
         <h1 th:text="${cadastro} ? 'Cadastrar Item' : 'Editar Item'" class="text-2xl font-bold text-blue-700 mb-6"></h1>
 
         <form th:action="@{/estoque/cadastro/salvar}" th:object="${item}" method="post" class="space-y-4">
+
+            <input type="hidden" th:field="*{id}" />
 
             <!-- Código -->
             <div>
