--- a/src/main/resources/templates/item/lista.html
+++ b/src/main/resources/templates/item/lista.html
@@ -44,7 +44,6 @@
         <table class="min-w-full divide-y divide-gray-200">
             <thead class="bg-gray-50">
             <tr>
-                <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Código</th>
                 <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Descrição</th>
                 <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Quantidade</th>
                 <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Unidade</th>
@@ -58,14 +57,13 @@
             <tbody class="divide-y divide-gray-200" th:each="item : ${listaItens}">
 
             <tr>
-                <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-900" th:text="${item.codigo}">COD123</td>
-                <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-900" th:text="${item.descricao}">Descrição</td>
-                <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-900" th:text="${item.quantidade}">10</td>
-                <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-900" th:text="${item.unidadeDeMedida}">Un</td>
-                <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-900" th:text="${item.marca}">Marca X</td>
-                <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-900" th:text="${item.localArmazenado}">Prateleira A</td>
-                <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-900" th:text="${item.tipo.nome}">Ferramenta</td>
-                <td class="px-6 py-4 text-sm text-gray-700" th:text="${item.observacoes}">Nenhuma</td>
+                <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-900" th:text="${item.descricao}"></td>
+                <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-900" th:text="${item.quantidade}"></td>
+                <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-900" th:text="${item.unidadeDeMedida}"></td>
+                <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-900" th:text="${item.marca}"></td>
+                <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-900" th:text="${item.localArmazenado}"></td>
+                <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-900" th:text="${item.tipo.nome}"></td>
+                <td class="px-6 py-4 text-sm text-gray-700" th:text="${item.observacoes}"></td>
                 <td class="px-6 py-4 whitespace-nowrap text-center text-sm font-medium space-x-4">
                     <!-- Editar -->
                     <a th:href="@{'/estoque/editar/' + ${item.id}}" title="Editar" class="text-blue-600 hover:text-blue-900">
